# solana-email

./: .eslintrc.json  .gitignore  .mocharc.json  Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
docs/: CHANGELOG.md  COMPREHENSIVE_PROJ_PLAN.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE.md  PHASE_I_HANDOFF.md  SECURITY_GUIDE.md
migrations/: deploy.ts
programs/solana_email_identity/: Cargo.toml
programs/solana_email_identity/src/: lib.rs
tests/: test.ts
