[package]
name = "solana_email_identity"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
[package.metadata.rustc-check-cfg]
values = ["target_os=solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_email_identity"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"

